--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,17 @@ body{
   background-color: #B4F5F0;
 }
 
-h1, h2, p{
+h1, h2, h3, h4 p{
   margin-top: 0;
+}
+
+h4{
+  margin-bottom: 5px;
+}
+
+h3{
+  margin: 0;
+  margin-bottom: 5px;
 }
 
 .header{
@@ -81,7 +90,7 @@ h1, h2, p{
 .tab-option{
   cursor: pointer;
   text-decoration: underline;
-  font-size: 25px;
+  font-size: 35px;
   text-align: center;
 }
 
@@ -93,11 +102,38 @@ h1, h2, p{
 
 .todo{
   display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   background-color: #fff;
-  height: 100px;
   width: 80%;
   margin: 0 auto;
   border-radius: 10px;
+}
+
+.todo-info{
+  margin: 0 auto;
+  width:90%
+}
+
+.todo-title{
+  text-align: center;
+  margin-top: 15px;
+  margin-bottom: 0;
+}
+
+.todo-detail{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 25%;
+  text-align: center;
+}
+
+.todo-details{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .todo-container{
