--- a/src/index.css
+++ b/src/index.css
@@ -58,8 +58,9 @@ h3{
 
 .btn{
   border-radius: 10px;
-  background-color: #041F60;
   cursor: pointer;
+  padding: 0.5em;
+  background-color: #041F60;
   color: #B4F5F0;
 }
 
@@ -67,11 +68,20 @@ h3{
   color: #fff;
 }
 
+.todo-btn{
+  padding: 0.4em;
+}
+
+.create-btn{
+  text-align: center;
+  width: fit-content;
+  margin: 20px auto;
+}
+
 .sign-out-btn{
   font-size: 32px;
   display: flex;
   align-items: center;
-  padding: 0.3em;
 }
 
 .sign-in-btn{
@@ -108,6 +118,9 @@ h3{
   width: 80%;
   margin: 0 auto;
   border-radius: 10px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  border: 2px solid #041F60
 }
 
 .todo-info{
@@ -118,7 +131,7 @@ h3{
 .todo-title{
   text-align: center;
   margin-top: 15px;
-  margin-bottom: 0;
+  margin-bottom: 5px;
 }
 
 .todo-detail{
@@ -137,11 +150,48 @@ h3{
 }
 
 .todo-container{
-  background-color: red;
   width: 50%;
 }
 
 .done-container{
-  background-color: blue;
   width: 50%;
+}
+
+form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+label, input{
+  display: block;
+  color: #041F60;
+  margin-bottom: 10px; 
+}
+
+label{
+  font-size: 20px;
+  text-align: center;
+}
+
+input{
+  border: 1px solid #041F60;
+  border-radius: 10px;
+  padding: 10px;
+  margin-top: 5px;
+}
+
+.check-input{
+  margin: 10px auto;
+}
+
+.submit-btn{
+  font-size: 20px;
+  width: fit-content;
+  margin: auto;
+}
+
+dialog{
+  border-radius: 10px;
+  border : 4px solid #041F60
 }
