--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,7 @@ h3{
 .todo-btn{
   font-size: 17px;
   padding: 0.5em;
+  margin-bottom: 0;
 }
 
 .create-btn{
@@ -125,7 +126,8 @@ h3{
 
 .todo-info{
   margin: 0 auto;
-  width:90%
+  width:90%;
+  cursor: pointer;
 }
 
 .todo-title{
