added word breaking for exceptionally long asignees or titles

--- a/src/index.css
+++ b/src/index.css
@@ -134,6 +134,11 @@ h3{
   text-align: center;
   margin-top: 15px;
   margin-bottom: 5px;
+  word-break: break-all;
+}
+
+.todo-asignee{
+  word-break: break-all;
 }
 
 .todo-detail{
